# S2426Sort

./: .gitignore  AutoRun.sh  CMakeLists.txt  README.md  makefile
cal/: CalibrationFile_Clean.cal  CalibrationFile_May1326.cal  CalibrationFile_May1326_pol1.cal  CalibrationFile_Nov182025.cal  fromyiyi.cal
include/: Channel.h  EventBuilder.h  EventProcess.h  Fragment.h  Histogramer.h  TMidasBanks.h  TMidasEvent.h  TMidasFile.h  TRawEvent.h  TRawFile.h  TXMLOdb.h  coreMap.h  globals.h  utils.h
libraries/: CMakeLists.txt
libraries/Channel/: CMakeLists.txt  Channel.cxx  Linkdef.h
libraries/EventProcessing/: CMakeLists.txt  EventBuilder.cxx  EventBuilder.cxx.bak  EventProcess.cxx
libraries/Histogramer/: CMakeLists.txt  Histogramer.cxx
libraries/TMidas/: CMakeLists.txt  Fragment.cxx  Fragment2.cxx  LinkDef.h  TMidasEvent.cxx  TMidasFile.cxx
scratch/: junk.txt
src/: s2426Sort.cxx
